--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -220,11 +220,15 @@
     <Content Include="NibrsXsd\xml\wantlist.xml" />
     <Content Include="NibrsXsd\xml\xml-catalog.xml" />
     <Content Include="Ucr\Reports\Arson\arson.xml" />
+    <Content Include="Ucr\Reports\SHR\SHRSample.xml" />
+    <Content Include="Ucr\Reports\SHR\SHR.xslt" />
     <EmbeddedResource Include="Ucr\Reports\Arson\arson.xsl" />
     <Content Include="Ucr\Reports\Asre\asre.xml">
       <SubType>Designer</SubType>
     </Content>
     <EmbeddedResource Include="Ucr\Reports\Asre\asre.xsl" />
+    <Content Include="Ucr\Reports\HCR\HCRSample.xml" />
+    <Content Include="Ucr\Reports\HCR\HCR.xslt" />
     <Content Include="Ucr\Reports\HumanTrafficking\ht.xml" />
     <EmbeddedResource Include="Ucr\Reports\HumanTrafficking\ht.xsl" />
     <Content Include="Ucr\Reports\HumanTrafficking\humantrafficking.xml" />
