Tweaked HCR and SHR XSLT files according to the changes in the XML files

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -222,8 +222,8 @@
     <Content Include="NibrsXsd\xml\xml-catalog.xml" />
     <Content Include="Ucr\Reports\Arson\arson.xml" />
     <Content Include="Ucr\Reports\SupplementaryHomicide\SHRSample.xml" />
-    <Content Include="Ucr\Reports\SupplementaryHomicide\shr.xslt" />
     <Content Include="Ucr\Reports\SHR\TEST.xslt" />
+    <Content Include="Ucr\Reports\SupplementaryHomicide\SHR.xslt" />
     <EmbeddedResource Include="Ucr\Reports\Arson\arson.xsl" />
     <Content Include="Ucr\Reports\Asre\asre.xml">
       <SubType>Designer</SubType>
