--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -221,15 +221,15 @@
     <Content Include="NibrsXsd\xml\wantlist.xml" />
     <Content Include="NibrsXsd\xml\xml-catalog.xml" />
     <Content Include="Ucr\Reports\Arson\arson.xml" />
+    <EmbeddedResource Include="Ucr\Reports\HateCrime\hcr.xslt" />
+    <EmbeddedResource Include="Ucr\Reports\SupplementaryHomicide\shr.xslt" />
     <Content Include="Ucr\Reports\SupplementaryHomicide\SHRSample.xml" />
-    <Content Include="Ucr\Reports\SupplementaryHomicide\shr.xslt" />
     <EmbeddedResource Include="Ucr\Reports\Arson\arson.xsl" />
     <Content Include="Ucr\Reports\Asre\asre.xml">
       <SubType>Designer</SubType>
     </Content>
     <EmbeddedResource Include="Ucr\Reports\Asre\asre.xsl" />
     <Content Include="Ucr\Reports\HateCrime\HCRSample.xml" />
-    <Content Include="Ucr\Reports\HateCrime\hcr.xslt" />
     <Content Include="Ucr\Reports\HumanTrafficking\ht.xml" />
     <EmbeddedResource Include="Ucr\Reports\HumanTrafficking\ht.xsl" />
     <Content Include="Ucr\Reports\HumanTrafficking\humantrafficking.xml" />
