Added new classes to help in the rendering of ucr reports. Updated the WriteXml function in Submission.cs to return the submission object that it created and used for writing of submission.xml; this way, application can just use same object without needing to perform IO operations.

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Ucr\Extensions.cs" />
     <Compile Include="Ucr\NibrsImport.cs" />
     <Compile Include="Ucr\DataCollections\ReportData.cs" />
+    <Compile Include="Ucr\ReportRendering\HtmlRenderer.cs" />
     <Compile Include="Ucr\Translate.cs" />
     <Compile Include="Constants\Ucr\UcrCodes.cs" />
     <Compile Include="Utility\Extensions.cs" />
