Modifying xsl for many reports to upgrade the proximity and organization of particular cells. Also includes text that was missing from the original UCR reports per Sherro's request.

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -218,6 +218,7 @@
     <Content Include="NibrsXsd\xml\nibrs2.xml" />
     <Content Include="NibrsXsd\xml\wantlist.xml" />
     <Content Include="NibrsXsd\xml\xml-catalog.xml" />
+    <Content Include="Ucr\Reports\AllReports.xml" />
     <Content Include="Ucr\Reports\Arson\arson.xml" />
     <EmbeddedResource Include="Ucr\Reports\HateCrime\hcr.xslt" />
     <EmbeddedResource Include="Ucr\Reports\SupplementaryHomicide\shr.xslt" />
