Removing city and parish from headers. Fixing bug in ASRE where age data was being queried incorrectly due to the introduction of the "Ages" element

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -222,8 +222,10 @@
     <Content Include="Ucr\Reports\Arson\arson.xml" />
     <EmbeddedResource Include="Ucr\Reports\HateCrime\hcr.xslt" />
     <EmbeddedResource Include="Ucr\Reports\SupplementaryHomicide\shr.xslt" />
-    <EmbeddedResource Include="Ucr\Reports\SupplementaryHomicide\shr - Copy.xslt" />
-    <Content Include="Ucr\Reports\SupplementaryHomicide\SHRSample - Copy.xml" />
+    <EmbeddedResource Include="Ucr\Reports\SupplementaryHomicide\shr2.xslt" />
+    <EmbeddedResource Include="Ucr\Reports\HateCrime\hcr2.xslt" />
+    <Content Include="Ucr\Reports\HateCrime\hcr2.xml" />
+    <Content Include="Ucr\Reports\SupplementaryHomicide\shr2.xml" />
     <Content Include="Ucr\Reports\SupplementaryHomicide\SHRSample.xml" />
     <EmbeddedResource Include="Ucr\Reports\Arson\arson.xsl" />
     <Content Include="Ucr\Reports\Asre\asre.xml">
