- Modified code after adding proxy classes to Nibrs Interfsace project.

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -76,6 +76,7 @@
       <HintPath>..\..\..\winlibrs\Application\packages\System.Runtime.InteropServices.RuntimeInformation.4.0.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.Serialization.Formatters.Soap" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
