created a EndPoint to download the XML file Locally and move the status types to the Nibrs Xml

--- a/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
+++ b/NibrsXmlGenerator/NibrsXmlGenerator/NibrsXml.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Constants\Namespace.cs" />
     <Compile Include="Constants\NibrsCodeGroups.cs" />
     <Compile Include="Constants\NibrsCodes.cs" />
+    <Compile Include="Constants\NibrsSubmissionStatusCodes.cs" />
     <Compile Include="Constants\Ucr\UcrCodeGroups.cs" />
     <Compile Include="DataAccess\Collection\SubmissionCollection.cs" />
     <Compile Include="DataAccess\DatabaseClient.cs" />
